Related work updates
I will finish the related work stuff

--- a/sigproc-sp.bib
+++ b/sigproc-sp.bib
@@ -37,3 +37,40 @@
   pages={1013--1024},
   year={2014}
 }
+
+@inproceedings{Wang:2013:AIM:2532443.2532445,
+ author = {Wang, Xudong and Liu, Xuanzhe and Huang, Gang and Liu, Yunxin},
+ title = {AppMobiCloud: Improving Mobile Web Applications by Mobile-cloud Convergence},
+ booktitle = {Proceedings of the 5th Asia-Pacific Symposium on Internetware},
+ series = {Internetware '13},
+ year = {2013},
+ isbn = {978-1-4503-2369-7},
+ location = {Changsha, China},
+ pages = {14:1--14:10},
+ articleno = {14},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2532443.2532445},
+ doi = {10.1145/2532443.2532445},
+ acmid = {2532445},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {JavaScript, mobile-cloud convergence, offloading},
+} 
+
+@inproceedings{Xanthopoulos:2013:CAC:2490257.2490292,
+ author = {Xanthopoulos, Spyros and Xinogalos, Stelios},
+ title = {A Comparative Analysis of Cross-platform Development Approaches for Mobile Applications},
+ booktitle = {Proceedings of the 6th Balkan Conference in Informatics},
+ series = {BCI '13},
+ year = {2013},
+ isbn = {978-1-4503-1851-8},
+ location = {Thessaloniki, Greece},
+ pages = {213--220},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2490257.2490292},
+ doi = {10.1145/2490257.2490292},
+ acmid = {2490292},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {HTML5, cross-platform development, generated app, hybrid app, interpreted app, mobile application, native app, smart mobile device, web app},
+} 
