More Related work, just one left to do.
I will finish this at 2pm when I meet up with you guys

--- a/sigproc-sp.bib
+++ b/sigproc-sp.bib
@@ -74,3 +74,59 @@
  address = {New York, NY, USA},
  keywords = {HTML5, cross-platform development, generated app, hybrid app, interpreted app, mobile application, native app, smart mobile device, web app},
 } 
+
+@inproceedings{Mazinanian:2014:DRO:2635868.2635879,
+ author = {Mazinanian, Davood and Tsantalis, Nikolaos and Mesbah, Ali},
+ title = {Discovering Refactoring Opportunities in Cascading Style Sheets},
+ booktitle = {Proceedings of the 22Nd ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+ series = {FSE 2014},
+ year = {2014},
+ isbn = {978-1-4503-3056-5},
+ location = {Hong Kong, China},
+ pages = {496--506},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2635868.2635879},
+ doi = {10.1145/2635868.2635879},
+ acmid = {2635879},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Cascading style sheets, duplication, refactoring},
+} 
+
+@inproceedings{Ma:2013:MTS:2541614.2541621,
+ author = {Ma, Yun and Fang, Yimeng and Zhu, Xiaomin and Liu, Xuanzhe and Huang, Gang},
+ title = {MobiTran: Tool Support for Refactoring PC Websites to Smart Phones},
+ booktitle = {Proceedings Demo \&\#38; Poster Track of ACM/IFIP/USENIX International Middleware Conference},
+ series = {MiddlewareDPT '13},
+ year = {2013},
+ isbn = {978-1-4503-2549-3},
+ location = {Beijing, China},
+ pages = {6:1--6:2},
+ articleno = {6},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/2541614.2541621},
+ doi = {10.1145/2541614.2541621},
+ acmid = {2541621},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {mobile web application, refactoring},
+} 
+
+@inproceedings{Sahin:2014:CRA:2652524.2652538,
+ author = {Sahin, Cagri and Pollock, Lori and Clause, James},
+ title = {How Do Code Refactorings Affect Energy Usage?},
+ booktitle = {Proceedings of the 8th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement},
+ series = {ESEM '14},
+ year = {2014},
+ isbn = {978-1-4503-2774-9},
+ location = {Torino, Italy},
+ pages = {36:1--36:10},
+ articleno = {36},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2652524.2652538},
+ doi = {10.1145/2652524.2652538},
+ acmid = {2652538},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {code refactoring, empirical study, energy usage},
+} 
