Last related work

--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -290,7 +290,10 @@ Their paper does explain how transformations of certain portions of websites may
 It may be that the touch-centric transformations improve scores on MobileOK because of its recommendation of using links on entire images instead of click boxes that do not cover the entire image.
 
 \subsection{How Do Code Refactorings Affect Energy Usage? \cite{Sahin:2014:CRA:2652524.2652538}}
-TODO
+In \cite{Sahin:2014:CRA:2652524.2652538}, Sahin et. al. explore the energy consumption of programs after refactorings are performed. 
+It focuses on refactorings in Java programs on PCs, not hybrid applications on mobile devices. 
+By focusing on energy consumption, \cite{Sahin:2014:CRA:2652524.2652538} considers one of the many elements that impact user experience. 
+We focus on metrics that affect the user's perceptions in the moment, such as loading times or render blocking as reported by PageSpeed Insights.
 
 \subsection{High Performance Web Sites\cite{souders2008high}}
 The paper discussed the importance of front-end performance.
