--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -106,7 +106,10 @@ William Leslie\\
 
 \maketitle
 \begin{abstract}
-Abstract here...
+Mobile hybrid applications are applications designed for mobile devices and written in web languages.
+By using the well supported web languages and running on top of something like PhoneGap, these applications run natively and download less data from the web than a website.
+Many of the guidelines and recommendations about applications written in web languages discuss improvements such as download speeds that do not affect hybrid applications.
+In this paper, we present analysis of hybrid applications performance and how they improve by using Google Closure Compiler and the recommendations of metrics tools.
 \end{abstract}
 
 % A category with the (minimum) three required fields
