added experience section

--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -312,11 +312,16 @@ It also lists best practices and shows why they are important.
 	\item Configure ETags
 	\item Make Ajax cacheable
 \end{enumerate}
+
+\section{Project Experience}
+\subsection{Corpus}
+We had a rough time obtaining a corpus. We first started by scanning the internet and Github for open source phonegap applications, and found small applications that would not have been great for our research. Many of the repositories were just examples, and tutorials. The phonegap website had a list of 720 phonegap applications with links to their apks. Apks were not useful to use because they were packaged up and didn't have the source code. So we decided to pull the list of phonegap applications and associated developers. We used this list of search for open source projects on github, but many repositories were links to download the apks, small example libraries, or applications with incomplete source. 
+
 \section{Conclusion}
 % This is a brief summary, but also contains the most surprising findings, implications, directions for future research.
 By combining the described changes into an automated refactoring tool, these improvements could be made in many applications.
 
-\section{Acknowledgements}
+\section{Acknowledgments}
 This paper was possible because of Dr. Danny Dig; Aharon Abadi of IBM; the makers of Google Closure Compiler, MobileOK, PageSpeed Insights; and the writers of all the apps we used for the experiment.
 
 \bibliographystyle{plain}
