--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -236,6 +236,23 @@ TODO: Here is a table showing the scores for the apps for each measurement. The 
 %What did you learn?
 
 TODO: Outlier: MobileOK marked apps down for "invalid CSS" but this is because they don't know about the new CSS3 @keyframes rule.
+
+\begin{figure}[h!]
+    \includegraphics[scale=0.4]{mobileokrq1}
+\end{figure}
+
+\begin{figure}[h!]
+    \includegraphics[scale=0.4]{pagespeedrq1}
+\end{figure}
+
+\begin{figure}[h!]
+    \includegraphics[scale=0.4]{loadtime}
+\end{figure}
+
+\begin{figure}[h!]
+    \includegraphics[scale=0.4]{pagespeeds}
+\end{figure}
+
 \section{Related Work}
 % We require at least 10 references. You need to compare and contrast your work to previous work.
 \subsection{Digua: Minifier and Obfuscator for Web Resources \cite{ciminiandigua}}
