Small motivating example change

--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -152,7 +152,7 @@ This software minifies John's JavaScript files and removes unused lines of code 
 He reasons that a smaller file would be quicker to parse than a large file.
 He uses this tool on all of his JavaScript files and pushes out the update.
 He continues to get complaints that the application is slow.
-Upon closer inspection, John finds that Google Closure Compiler does not remove entire functions, even though some of them go unused.  
+Upon closer inspection, John finds that Google Closure Compiler did not improve the loading times of his application.
 
 \section{Technical Challenges}
 %For the next iteration, add a section about the technical challenges (i.e., what are the hard problems, why is this research non trivial). For example, you could talk about measuring accurately the runtime performance, dependencies, the dynamic nature of JS etc.
