--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -355,7 +355,10 @@ We had a rough time obtaining a corpus. We first started by scanning the interne
 \section{Conclusion}
 % This is a brief summary, but also contains the most surprising findings, implications, directions for future research.
 By combining the described changes into an automated refactoring tool, these improvements could be made in many applications.
-
+Further research must be done into how to make these refactorings compatible with the largest number of apps.
+While most were improved, some outliers lost functionality, threw errors, or just simply developed strange behaviors.
+Other avenues to explore would be testing applications on mobile devices.
+During the testing phase we lacked the know-how to automate load time analysis from a mobile device and the time to do so manually.
 \section{Acknowledgments}
 This paper was possible because of Dr. Danny Dig; Aharon Abadi of IBM; the makers of Google Closure Compiler, MobileOK, PageSpeed Insights; and the writers of all the apps we used for the experiment.
 
