--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -228,12 +228,31 @@ We also did some research and found some performance techniques used by Phonegap
 	\item limit libraries and frameworks
 \end{enumerate}
 \section{Results}
-%Here you present the results using graphs, charts, etc. You also interpret the results, highlight some of the scenarios where Eradicator did very well, but also those where Eradicator did not do well. You can show examples of corner cases where Eradicator did not do well and possible explanations. 
-TODO: Here is a table showing the scores for the apps for each measurement. The proposed set of changes had a big impact on PageSpeed Insights speed scores, significant impact on MobileOK and load times, and no impact on PageSpeed Insights User Experience scores. Explain the takeaway for each of these. 
+%Here you present the results using graphs, charts, etc. You also interpret the results, highlight some of the scenarios where Eradicator did very well, but also those where Eradicator did not do well. You can show examples of corner cases where Eradicator did not do well and possible explanations.
+\subsection{RQ1: Traditional Guidelines}
+We were expecting that changing the original according the the tradition guidelines would yield no significant speed improvements. 
+The next 2 graphs show the comparison between the original and the compiled version of the apps.  
+\begin{figure}[h!]
+    \includegraphics[scale=0.4]{mobileokrq1}
+    \caption{The changes yielded no significant changes at a p-value = 0.8776}
+\end{figure}
+
+\begin{figure}[h!]
+    \includegraphics[scale=0.4]{pagespeedrq1}
+    \caption{The changes yielded significant changes at a p-value = 9.905e-05}
+\end{figure}
+
+After making the changes to the original apps, the PageSpeed Insights showed a significant change. 
+This was very unexpected, but since both Google Closure Compiler and Google PageSpeed Insights were made by the same company, farther research needs to be done to understand this change.
+
+
+
+% TODO: Here is a table showing the scores for the apps for each measurement. The proposed set of changes had a big impact on PageSpeed Insights speed scores, significant impact on MobileOK and load times, and no impact on PageSpeed Insights User Experience scores. Explain the takeaway for each of these. 
 %When you present the results, in addition to simply showing graphs and charts, you need to address these questions:
 %What are the surprising/unexpected results?
 %What are the outliers?
 %What did you learn?
+\subsection{RQ1: Improved Guidelines}
 From the nine applications that we manually refactored with the improved guidelines, we have consistently improved speed-ups over the respective original applicatons.
 One outlier from our results was an application which did not load after the improvements were implemented.
 While the load speed increased on this application, it stopped working correctly.
@@ -242,15 +261,8 @@ There are references within this while to other JS files that have been removed 
 Since these files no longer existed the page would throw an error and terminate before the HTML loads on the page, resulting a blank page.
 This shows that while our refactoring methods may improve performance, some functionality may be lost in certain applications.
 
-TODO: Outlier: MobileOK marked apps down for "invalid CSS" but this is because they don't know about the new CSS3 @keyframes rule.
+% TODO: Outlier: MobileOK marked apps down for "invalid CSS" but this is because they don't know about the new CSS3 @keyframes rule.
 
-\begin{figure}[h!]
-    \includegraphics[scale=0.4]{mobileokrq1}
-\end{figure}
-
-\begin{figure}[h!]
-    \includegraphics[scale=0.4]{pagespeedrq1}
-\end{figure}
 
 \begin{figure}[h!]
     \includegraphics[scale=0.4]{loadtime}
