--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -367,10 +367,14 @@ We had a rough time obtaining a corpus. We first started by scanning the interne
 \section{Conclusion}
 % This is a brief summary, but also contains the most surprising findings, implications, directions for future research.
 By combining the described changes into an automated refactoring tool, these improvements could be made in many applications.
+From our results one can see that our improvements can significantly improve page load times.
+These enhancements did not, however, transfer over to improvement in usability and in some cases would cause problems.
 Further research must be done into how to make these refactorings compatible with the largest number of apps.
 While most were improved, some outliers lost functionality, threw errors, or just simply developed strange behaviors.
 Other avenues to explore would be testing applications on mobile devices.
+We do not believe that our method of running the websites from a server and calculating page load times from there is a completely accurate measurement of how the application would perform on a phone or similar device.
 During the testing phase we lacked the know-how to automate load time analysis from a mobile device and the time to do so manually.
+Overall, we have gotten some promising results and posed some new questions for future studies.
 \section{Acknowledgments}
 This paper was possible because of Dr. Danny Dig; Aharon Abadi of IBM; the makers of Google Closure Compiler, MobileOK, PageSpeed Insights; and the writers of all the apps we used for the experiment.
 
