--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -230,8 +230,8 @@ We also did some research and found some performance techniques used by Phonegap
 \section{Results}
 %Here you present the results using graphs, charts, etc. You also interpret the results, highlight some of the scenarios where Eradicator did very well, but also those where Eradicator did not do well. You can show examples of corner cases where Eradicator did not do well and possible explanations.
 \subsection{RQ1: Traditional Guidelines}
-We were expecting that changing the original according the the tradition guidelines would yield no significant speed improvements. 
-The next 2 graphs show the comparison between the original and the compiled version of the apps.  
+We were expecting that changing the original according to the traditional guidelines would yield no significant speed improvements. 
+The next 2 graphs show the comparison between the original and compiled versions of the apps.  
 \begin{figure}[h!]
     \includegraphics[scale=0.4]{mobileokrq1}
     \caption{The changes yielded no significant changes at a p-value = 0.8776}
@@ -242,8 +242,8 @@ The next 2 graphs show the comparison between the original and the compiled vers
     \caption{The changes yielded significant changes at a p-value = 9.905e-05}
 \end{figure}
 
-After making the changes to the original apps, the PageSpeed Insights showed a significant change. 
-This was very unexpected, but since both Google Closure Compiler and Google PageSpeed Insights were made by the same company, farther research needs to be done to understand this change.
+After making the changes to the original apps, PageSpeed Insights showed a significant change. 
+This was very unexpected, but since both Google Closure Compiler and Google PageSpeed Insights were made by the same company, further research needs to be done to understand this change.
 
 
 
