--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -263,7 +263,7 @@ This shows that while our refactoring methods may improve performance, some func
 
 % TODO: Outlier: MobileOK marked apps down for "invalid CSS" but this is because they don't know about the new CSS3 @keyframes rule.
 
-
+The next 2 graphs shows the comparison between the 3 version of the app; the original, traditional compiled, and our improved version. Our improved version rendered twice as fast as the original and compiled version. Also Figure 4 showed improves with the Google PageSpeed Insight scores. Our improved version did not make any improvements on the MobileOk scores. 
 \begin{figure}[h!]
     \includegraphics[scale=0.4]{loadtime}
 \end{figure}
