--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -137,7 +137,7 @@ Then, we run Google Closure Compiler on the apps and record the same scores (opt
 Finally, we measure the same benchmarks for apps we improved with our recommendations (improved).
 \subsection{Research Questions}
 % Make sure you explicitly list the research questions. Have specific questions, rather than generic questions. For example, if you built an amazing tool, Eradicator, a question such as "Is Eradicator useful?" is too vague. Instead, you should design some specific questions that answer the usefulness from different angles: how does Eradicator improve programmer productivity, software quality, what is its running time, is it scalable, etc.
-To provide new guidelines, we propose the following research questions:
+To provide new guidelines, we propose the following research questions:\\
 RQ1: Do guidelines for the loading of websites on mobile devices apply to hybrid applications?\\
 RQ2: If not, what new guidelines can be provided to improve the performance of hybrid applications?
 
@@ -363,7 +363,9 @@ So we decided to pull the list of phonegap applications and associated developer
 We used this list of search for open source projects on github, but many repositories were links to download the apks, small example libraries, or applications with incomplete source. 
 
 \subsection{Collaboration}
-We admit that as a group we have little research experience
+We admit that as a group we have little research experience. 
+We would have had more success by having meetings much more often with the professor to discuss lower level progress on the project.
+This would have helped with communicating our struggles during the project and gave the professor a deeper look into our efforts.
 
 \section{Conclusion}
 % This is a brief summary, but also contains the most surprising findings, implications, directions for future research.
